<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="hello">Hello World, Login!</string>
	<string name="app_name">网上拍卖管理系统</string>
	<string name="user_name">用户名称：</string>
	<string name="user_save">保存用户名</string>
	<string name="user_notsave">不保存用户名</string>
	<string name="user_pass">用户密码：</string>
	<string name="input_user">请输入用户名</string>
	<string name="input_passwd">请输入密码</string>
	<string name="function">功能浏览</string>
	<string name="sale_function">拍卖用户功能浏览</string>
	<string name="login">登录</string>
	<string name="back">返回</string>
	<string name="start">启动主界面</string>
	<string name="searches">商品查询</string>
	<string name="nameindex">按名称查询</string>
	<string name="search">商品查询结果如下</string>
	<string name="saledsearches">已拍卖商品查询</string>
	<string name="bidedsearches">已竞拍商品查询</string>
	<string name="saledsearch">已拍卖商品查询结果如下</string>
	<string name="bidedsearch">已竞拍商品查询结果如下</string>
	<string name="user_info">还未注册账号？赶快注册吧！</string>
	<string name="user_register">拍卖用户注册</string>
	<string name="user_registerbid">竞标用户注册</string>
	<string name="add">添加</string>
	<string name="bid">竞价</string>
	<string name="confirm">确定</string>
	<string name="cancel">取消</string>
	<string name="welcome">欢迎您使用网上拍卖管理系统</string>
	<string name="view_succ">浏览竞得商品</string>
	<string name="view_bid">您参与竞标的商品</string>
	<string name="view_fail">浏览流拍商品</string>
	<string name="manage_item">您当前的拍卖商品</string>
	<string name="manage_kind">系统的所有商品种类</string>
	<string name="choose_kind">请选择一个商品种类</string>
	<string name="item_list">当前种类的商品</string>
	<string name="item_name">商品名：</string>
	<string name="item_kind">商品种类：</string>
	<string name="item_desc">商品描述：</string>
	<string name="win_price">赢取价格：</string>
	<string name="max_price">最高竞价：</string>
	<string name="remark">商品备注：</string>
	<string name="init_price">起拍价格：</string>
	<string name="avail_time">有效时间：</string>
	<string name="end_time">结束时间：</string>
	<string name="bid_price">竞标价格：</string>
	<string name="bid_time">竞标时间：</string>
	<string name="bid_user">竞标人：</string>
	<string name="add_kind_title">添加商品种类</string>
	<string name="add_item_title">添加拍卖商品</string>
	<string name="delete_item">删除商品信息</string>
	<string name="update_item">修改商品信息</string>
	<string name="kind_name">种类名称：</string>
	<string name="kind_desc">种类描述：</string>
	<string name="item_detail_title">商品详情</string>
	<string name="you_bid">您的竞价：</string>
</resources>
