<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bbr"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/hello"
        android:paddingTop="15dip"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dip" >

        <TextView
            android:id="@+id/login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="18sp" >
        </TextView>

        <EditText
            android:id="@+id/et_UserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_user"
            android:textSize="15sp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_pass"
            android:textSize="18sp" >
        </TextView>

        <EditText
            android:id="@+id/et_UserPwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_passwd"
            android:password="true"
            android:textSize="15sp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="15dip" >

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="保存用户名" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="15dip" >

        <Button
            android:id="@+id/btn_Ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" >
        </Button>

        <Button
            android:id="@+id/btn_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:text="@string/cancel" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dip" >

        <TextView
            android:id="@+id/Register_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/user_info"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="30dip" >

            <Button
                android:id="@+id/Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_register" />

            <Button
                android:id="@+id/Registerbid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_registerbid" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>