<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/hello"
        android:paddingTop="15dip"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dip" >

        <TextView
            android:id="@+id/mlogin_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="管理员名称:"
            android:textSize="18sp" >
        </TextView>

        <EditText
            android:id="@+id/et_mUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_user"
            android:textSize="15sp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/mpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="管理员密码:"
            android:textSize="18sp" >
        </TextView>

        <EditText
            android:id="@+id/et_mUserPwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_passwd"
            android:password="true"
            android:textSize="15sp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="15dip" >

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="保存用户名" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="15dip" >

        <Button
            android:id="@+id/mbtn_Ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" >
        </Button>

        <Button
            android:id="@+id/mbtn_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:text="@string/cancel" >
        </Button>
    </LinearLayout>

</LinearLayout>